--- a/example/index.html
+++ b/example/index.html
@@ -1,29 +1,56 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html class="no-js" lang="">
+<style>
+    .container {
+        /* display: flex;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center; */
+        width: 100%;
+        height: 110vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .loader {
+        border: 16px solid #f3f3f3;
+        /* Light grey */
+        border-top: 16px solid #33cc99;
+        /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+        /* margin: auto auto; */
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+</style>
 
 <head>
-    <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.js"></script>
-    <![endif]-->
+    <base href="/" />
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>React Immutable Treeview</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+    <title>
+
+    </title>
 </head>
 
-<body>
-    <!--[if lt IE 8]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <div id="content">
-        <h1>If you can see this, something is broken (or JS is not enabled)!</h1>
+<body style="box-sizing: border-box;margin: 0;padding: 0;">
+    <div id="content" class="container">
+        <div class="loader" />
     </div>
-    <script type="text/javascript" src="assets/main.js"></script>
-    <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-sham.min.js"></script>
-    <![endif]-->
 </body>
+
 
 </html>
