--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
         align-items: center;
         justify-content: center; */
         width: 100%;
-        height: 110vh;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -47,7 +47,7 @@
 </head>
 
 <body style="box-sizing: border-box;margin: 0;padding: 0;">
-    <div id="content" class="container">
+    <div id="app" class="container">
         <div class="loader" />
     </div>
 </body>
