fix static path  remove lib folder

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="app" class="container">
         <div class="loader" />
     </div>
-<script type="text/javascript" src="app.f05098fc3e957b9a7d59.js"></script><script type="text/javascript" src="babelPolyfill.f05098fc3e957b9a7d59.js"></script></body>
+<script type="text/javascript" src="/react-immutable-treeview/app.1467439cc3f2e4eb3411.js"></script><script type="text/javascript" src="/react-immutable-treeview/babelPolyfill.1467439cc3f2e4eb3411.js"></script></body>
 
 
 </html>
