--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </style>
 
 <head>
-    <base href="/" />
+    <base href="/react-immutable-treeview" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
@@ -50,7 +50,7 @@
     <div id="app" class="container">
         <div class="loader" />
     </div>
-<script type="text/javascript" src="/react-immutable-treeview/app.aba8bdc6ae4004d33765.js"></script><script type="text/javascript" src="/react-immutable-treeview/babelPolyfill.aba8bdc6ae4004d33765.js"></script></body>
+<script type="text/javascript" src="/react-immutable-treeview/app.83cda17912a7b32c5260.js"></script><script type="text/javascript" src="/react-immutable-treeview/babelPolyfill.83cda17912a7b32c5260.js"></script></body>
 
 
 </html>
