--- a/example/index.html
+++ b/example/index.html
@@ -37,7 +37,7 @@
 </style>
 
 <head>
-    <base href="/" />
+    <base href="" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
