--- a/example/index.html
+++ b/example/index.html
@@ -37,10 +37,10 @@
 </style>
 
 <head>
-    <base href="" />
+    <base href="/react-immutable-treeview" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+    <meta name="viewport" ontent="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
     <title>
 
     </title>
