fix some spell error

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <base href="/react-immutable-treeview" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" ontent="width=device-width, initial-scale=1,user-scalable=0, maximum-scale=1, minimum-scale=1">
+    <meta name="viewport" ontent="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
     <title>
 
     </title>
@@ -50,9 +50,7 @@
     <div id="app" class="container">
         <div class="loader" />
     </div>
-    <script type="text/javascript" src="/react-immutable-treeview/app.826169d776055add427f.js"></script>
-    <script type="text/javascript" src="/react-immutable-treeview/babelPolyfill.826169d776055add427f.js"></script>
-</body>
+<script type="text/javascript" src="/react-immutable-treeview/app.727dce67c784f56eea49.js"></script><script type="text/javascript" src="/react-immutable-treeview/babelPolyfill.727dce67c784f56eea49.js"></script></body>
 
 
 </html>
