--- a/example/index.html
+++ b/example/index.html
@@ -37,12 +37,12 @@
 </style>
 
 <head>
-    <base href="/react-immutable-treeview" />
+    <base href="<%= htmlWebpackPlugin.options.base %>" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" ontent="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
     <title>
-
+        <%= htmlWebpackPlugin.options.title %>
     </title>
 </head>
 
